Release/2.1.0 (#94)
* Prepare 2.0.2-SNAPSHOT

* Downgrade to Java 17 (#42)

* Bump camunda.version from 7.23.0 to 7.24.0

Bumps `camunda.version` from 7.23.0 to 7.24.0.

Updates `org.camunda.bpm:camunda-engine` from 7.23.0 to 7.24.0

Updates `org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-test` from 7.23.0 to 7.24.0

Updates `org.camunda.bpm:camunda-bpm-junit5` from 7.23.0 to 7.24.0

---
updated-dependencies:
- dependency-name: org.camunda.bpm:camunda-engine
  dependency-version: 7.24.0
  dependency-type: direct:production
  update-type: version-update:semver-minor
- dependency-name: org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-test
  dependency-version: 7.24.0
  dependency-type: direct:development
  update-type: version-update:semver-minor
- dependency-name: org.camunda.bpm:camunda-bpm-junit5
  dependency-version: 7.24.0
  dependency-type: direct:development
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* Automate release process

* Closes #51 - Fix patch tests using migrateable_processmodel_1_0_1_with_formkeys.bpmn

* Rename method to GetMigrationInstructions

* Bump actions/download-artifact from 5 to 6

Bumps [actions/download-artifact](https://github.com/actions/download-artifact) from 5 to 6.
- [Release notes](https://github.com/actions/download-artifact/releases)
- [Commits](https://github.com/actions/download-artifact/compare/v5...v6)

---
updated-dependencies:
- dependency-name: actions/download-artifact
  dependency-version: '6'
  dependency-type: direct:production
  update-type: version-update:semver-major
...

Signed-off-by: dependabot[bot] <support@github.com>

* Bump actions/upload-artifact from 4 to 5

Bumps [actions/upload-artifact](https://github.com/actions/upload-artifact) from 4 to 5.
- [Release notes](https://github.com/actions/upload-artifact/releases)
- [Commits](https://github.com/actions/upload-artifact/compare/v4...v5)

---
updated-dependencies:
- dependency-na